--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.stupidpeople.cuentame"
@@ -22,7 +22,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+//    compile 'com.android.support:support-annotations:26.0.1'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.parse.bolts:bolts-android:1.+'
-    compile 'com.parse:parse-android:1.+'
+//    compile 'com.parse:parse-android:1.16.3'
+        compile 'com.parse:parse-android:1.15.8'
+
 }
