Primera version funcionante

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.stupidpeople.cuentame">
+    package="com.stupidpeople.cuentanos">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
+    <!--<uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />-->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <!--for log and save audio-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!--SHAKE-->
     <application
-        android:name=".Cuentame"
+        android:name="com.stupidpeople.cuentanos.Cuentanos"
         android:allowBackup="true"
         android:configChanges="orientation|screenSize"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +19,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.stupidpeople.cuentanos.MainActivity"
             android:configChanges="orientation|screenSize"
             android:launchMode="singleInstance">
 
