--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
-
+    // compileSdkVersion 23
+    compileSdkVersion 26
+    buildToolsVersion '28.0.3'
     defaultConfig {
-        applicationId "com.stupidpeople.cuentame"
-        minSdkVersion 15
-        targetSdkVersion 23
+        applicationId 'com.stupidpeople.dime'
+        minSdkVersion 21
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -17,15 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-//    compile 'com.android.support:support-annotations:26.0.1'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.parse.bolts:bolts-android:1.+'
-//    compile 'com.parse:parse-android:1.16.3'
-        compile 'com.parse:parse-android:1.15.8'
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.parse.bolts:bolts-android:1.+'
+    implementation 'com.parse:parse-android:1.16.3'
+    //    implementation 'com.parse:parse-android:1.15.8'
+    implementation 'com.android.support:support-v4:26.1.0'
 }
