--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,9 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:support-compat:26.1.0'
     implementation 'com.parse.bolts:bolts-android:1.+'
     implementation 'com.parse:parse-android:1.16.3'
-    //    implementation 'com.parse:parse-android:1.15.8'
     implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'org.jsoup:jsoup:1.12.1'
 }
