Creación de mp3s de la lectura con el sintetizador. Son ubicados en la memoria sd. Se generan ficheros de texto con el texto, para realizar posteriormente tf-idf y así nombrar cada uno de las "canciones" (que se realizarán uniendo 15 cápsulas.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <!--for log and save audio-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <!--SHAKE-->
     <application
         android:name="com.stupidpeople.cuentanos.Cuentanos"
