--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
@@ -22,6 +23,9 @@ allprojects {
     repositories {
         jcenter()
         google()
+        maven {
+            url 'https://jitpack.io'
+        }
     }
 }
 
