--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     // compileSdkVersion 23
-    compileSdkVersion 26
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 33
     defaultConfig {
         applicationId 'com.stupidpeople.dime'
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
     }
@@ -19,16 +18,17 @@ android {
     }
     productFlavors {
     }
+    namespace 'com.stupidpeople.cuentanos'
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:support-compat:26.1.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.core:core:1.9.0'
     implementation 'com.parse:parse-android:1.16.3'
-    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'org.jsoup:jsoup:1.12.1'
     implementation 'com.parse.bolts:bolts-android:1.4.0'
-    implementation 'com.github.adrielcafe:AndroidAudioConverter:0.0.8'
+    //implementation 'com.github.adrielcafe:AndroidAudioConverter:0.0.8'
 }
