funciona y los botones, no sé por qué, pero  no hay notificacio

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'org.jsoup:jsoup:1.12.1'
     implementation 'com.parse.bolts:bolts-android:1.4.0'
+//    implementation 'com.github.adrielcafe:AndroidAudioConverter:2a627f6ecd'
     //implementation 'com.github.adrielcafe:AndroidAudioConverter:0.0.8'
+    //esto falla. fui a https://jitpack.io/ para ver que tenía un error, así que puse una build
+    //anterior
 }
